--- a/iCommander-MacOS/Views/Base.lproj/Main.storyboard
+++ b/iCommander-MacOS/Views/Base.lproj/Main.storyboard
@@ -820,7 +820,7 @@
                                                                         </tableColumn>
                                                                     </tableColumns>
                                                                     <connections>
-                                                                        <action trigger="doubleAction" selector="leftTableDoubleClick:" target="XfG-lQ-9wD" id="fHA-oG-Op9"/>
+                                                                        <action trigger="doubleAction" selector="tableDoubleClick:" target="XfG-lQ-9wD" id="Ju5-uC-nSs"/>
                                                                         <outlet property="dataSource" destination="XfG-lQ-9wD" id="HgM-lA-ZFb"/>
                                                                         <outlet property="delegate" destination="XfG-lQ-9wD" id="jML-do-LnC"/>
                                                                     </connections>
@@ -956,7 +956,7 @@
                                                                         </tableColumn>
                                                                     </tableColumns>
                                                                     <connections>
-                                                                        <action trigger="doubleAction" selector="rightTableDoubleClick:" target="XfG-lQ-9wD" id="OL2-Lx-Z9I"/>
+                                                                        <action trigger="doubleAction" selector="tableDoubleClick:" target="XfG-lQ-9wD" id="GDF-5t-ceo"/>
                                                                         <outlet property="dataSource" destination="XfG-lQ-9wD" id="yj1-mO-jis"/>
                                                                         <outlet property="delegate" destination="XfG-lQ-9wD" id="T1f-eS-ofc"/>
                                                                     </connections>
